--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "gsap": "^3.0.0",
+    "jsbarcode": "^3.12.1",
     "vue": "^3.5.17",
     "vue-i18n": "^9.0.0"
   },
